--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,31 @@
 # 博客配置
-keywords: 极限博客,极限Blog,博客,极限
+keywords: 
 author: Core
-description: 心之所愿，无事不成。<br> Nothing is impossible to a willing heart.
+description: とある技術者の劣等感
 avatar: /images/favicon.ico
-beian: 粤ICP备15011643号
-gongan: 粤公网安备 44030402003967号
-copyright: 2017 - 2020 
+# beian: 粤ICP备15011643号
+# gongan: 粤公网安备 44030402003967号
+copyright: 2020 
 
 # 社交账号
-github: https://github.com/mrcore
-mail: mailto:x@jixian.io
-zhihu: https://zhihu.com/people/
-QQ: http://sighttp.qq.com/authd?IDKEY=
+github: https://github.com/takuya-takeuchi
+#mail: mailto:x@jixian.io
+twitter: https://twitter.com/takuya_takeuchi
+facebook: https://www.facebook.com/takuya.takeuchi.sns
+#zhihu: https://zhihu.com/people/
+#QQ: http://sighttp.qq.com/authd?IDKEY=
 
-  
+
+# Valine はOSSの中国製コメントシステム
 # Valine 评论，如何配置请看官网 https://valine.js.org
 valine:
-  enable: true # if you want use valine, please set enable: true
+  enable: false # if you want use valine, please set enable: true
   appid: 
   appkey: 
   notify: false # true/false:mail notify !!!Test,Caution. https://github.com/xCss/Valine/wiki/Valine-%E8%AF%84%E8%AE%BA%E7%B3%BB%E7%BB%9F%E4%B8%AD%E7%9A%84%E9%82%AE%E4%BB%B6%E6%8F%90%E9%86%92%E8%AE%BE%E7%BD%AE
   verify: false # true/false:verify code
   avatar: mp # avatar style https://github.com/xCss/Valine/wiki/avatar-setting-for-valine
-  placeholder: 念念不忘，必有回响... # comment box placeholder
+  placeholder: # comment box placeholder
   serverURLs: 
 
 # 百度统计设置
